--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-album": "^2.3.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
     "styled-components": "^6.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "scripts": {
     "start": "react-scripts start",
