--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "emailjs": "^4.0.3",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-photo-album": "^2.3.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
